--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -25,8 +25,16 @@ a {
     text-decoration: none;
 }
 
+.quote {
+    color: $nc-yellow;
+    font-size: 200px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .btn {
     border-radius: 0;
+    font-family: museo-sans, sans-serif;
+    font-weight: 800;
 }
 
 .btn-secondary {
@@ -55,6 +63,39 @@ a {
     }
 }
 
+form.fluent_form_3 .ff-btn-submit {
+    background-color: $nc-green !important;
+    color: #ffffff;
+    border-radius: 0 !important;
+    text-transform: uppercase;
+
+    &:hover {
+        box-shadow: 4px 4px $nc-yellow;
+
+        &:before {
+            transition: 0.5s;
+            }
+        
+    }
+}
+
+.fluentform .ff_upload_btn.ff-btn {
+    background: $nc-yellow !important;
+    color: #fff;
+    cursor: pointer;
+    display: block !important;
+    padding: 10px 20px;
+    margin: 0 auto;
+    width: 195px;
+    text-align: center;
+}
+
+.fluentform .ff_file_upload_holder {
+    margin: 0 auto !important;
+    width: 195px;
+    display: block;
+}
+
 //Pages 
 
 
@@ -69,7 +110,7 @@ a {
       }
 }
 
-.page-template-workforce-page, .page-template-leadership-consulting-page, .page-template-infrastructure-management-page, .page-template-team-page, .page-template-contact-page, .blog, .page-template-page-careers {
+.page-template-workforce-page, .page-template-leadership-consulting-page, .page-template-infrastructure-management-page, .page-template-team-page, .page-template-contact-page, .blog, .page-template-page-careers, .single-jobs, .single-post {
     .img-logo {
         display: none;
     }
@@ -125,6 +166,121 @@ a {
     }
 }
 
+.page-template-team-page {
+
+    .workforce {
+        display: none;
+    }
+    .infrastructure {
+        display: none;
+    }
+
+    .leadership {
+        display: none;
+    }
+
+}
+
+.page-template-contact-page {
+    .workforce {
+        display: none;
+    }
+    .infrastructure {
+        display: none;
+    }
+
+    .leadership {
+        display: none;
+    }
+
+    .team {
+        display: none;
+    }
+}
+
+.page-template-infrastructure-management-page {
+
+    .workforce {
+        display: none;
+    }
+    .careers {
+        display: none;
+    }
+
+    .leadership {
+        display: none;
+    }
+
+    .team {
+        display: none;
+    }
+
+    .contact {
+        display: none;
+    }
+
+}
+
+.page-template-page-careers {
+
+    .workforce {
+        display: none;
+    }
+    .infrastructure {
+        display: none;
+    }
+
+    .leadership {
+        display: none;
+    }
+
+    .team {
+        display: none;
+    }
+
+    .contact {
+        display: none;
+    }
+
+}
+
+// Post 
+
+.post {
+
+    .post-categories {
+        margin: 0 0 30px 0;
+        padding: 0;
+
+        li {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+
+            a {
+                font-size: 19px;
+                color: $nc-blue;
+                font-weight: 700;
+            }
+        }
+
+    
+    }
+     h1 {
+        font-size: 70pxw;
+     }
+
+     h2 {
+        font-size: 40px;
+     }
+
+     img {
+        width: 992px;
+        height: 625px;
+        margin: 30px auto;
+     }
+}
+
 // Nav Bars
 
 .clear-nav {
@@ -155,16 +311,17 @@ a {
     text-align: center;
 }
 
-.custom-select{
-    border: 1px solid #FFFFFF !important;
-    font-size: 12px!important;
-    border-radius: 30px!important;
-    width: 130px!important;
-    height: 36px;
-    background-color: $nc-yellow!important;
-    color: #FFFFFF!important;
-    background: $nc-yellow url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'><path fill='%23ffffff' d='M2 0L0 2h4zm0 5L0 3h4z'/></svg>") right .75rem center/8px 10px no-repeat!important;
-   }
+.dropdown-toggle::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
+    color: $nc-yellow;
+}
 
 // Headers 
 .banner-h {
@@ -256,3 +413,57 @@ lottie-player {
         }
     }
 }
+
+// Related Post 
+
+.related-post {
+    padding: 120px 20px;
+    background-color: $nc-blue;
+    color: $nc-white;
+
+    h3 {
+        font-size:24px;
+        min-height: 58px;
+
+        a {
+            color: $nc-white;
+        }
+    }
+
+    .btn-secondary {
+        position: relative;
+    
+        &:hover {
+            box-shadow: 4px 4px $nc-yellow;
+    
+            &:before {
+                transition: 0.5s;
+                }
+            
+        }
+    }
+}
+
+// Animations 
+
+@keyframes strike{
+    0%   { width : 0; }
+    100% { width: 100%; }
+  }
+  .strike {
+    position: relative;
+  }
+  .strike::after {
+    content: ' ';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: $nc-yellow;
+    animation-name: strike;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards; 
+  }
